crates/cctui-tui/src/snapshots/cctui__view_snapshots__access_mint_key_dialog_marks_the_scopes_outside_the_ceiling.snap
---
source: crates/cctui-tui/src/view_snapshots.rs
assertion_line: 2682
expression: render_screen(&mut app)
---
 Access  Users  Tokens  Machines [Keys]  — dorsk
 mint an api key

  label  ▏

  ❯ [x] read
    [ ] dispatch
    [ ] enroll  (outside this user's ceiling)
    [ ] admin  (outside this user's ceiling)

  Space toggles, Enter mints, Esc backs out












 Enter:confirm  Esc:back
