crates/cctui-tui/src/snapshots/cctui__view_snapshots__access_purge_asks_for_the_name_to_be_typed.snap
---
source: crates/cctui-tui/src/view_snapshots.rs
assertion_line: 2689
expression: render_screen(&mut app)
---
 Access [Users]  Tokens  Machines  Keys
 purge dorsk

  a purge is a hard delete: nothing about it comes back.
  type dorsk to confirm:

  ❯ ▏
















 Enter:confirm  Esc:back
