crates/cctui-tui/src/snapshots/cctui__view_snapshots__access_re_grant_dialog_prefills_what_the_key_already_holds.snap
---
source: crates/cctui-tui/src/view_snapshots.rs
assertion_line: 2718
expression: render_screen(&mut app)
---
 Access  Users  Tokens  Machines [Keys]  — dorsk
 re-grant this key

  label  ci▏

  ❯ [x] read
    [ ] dispatch
    [ ] enroll  (outside this user's ceiling)
    [ ] admin  (outside this user's ceiling)

  Space toggles, Enter re-grants (the key keeps working), Esc backs out












 Enter:confirm  Esc:back
