crates/cctui-tui/src/snapshots/cctui__view_snapshots__access_revoke_asks_first.snap
---
source: crates/cctui-tui/src/view_snapshots.rs
assertion_line: 2696
expression: render_screen(&mut app)
---
 Access [Users]  Tokens  Machines  Keys
 revoke dorsk? every token and machine stops working





















 Enter:do it  Esc:keep
