crates/cctui-tui/src/snapshots/cctui__view_snapshots__access_shows_a_new_secret_once.snap
---
source: crates/cctui-tui/src/view_snapshots.rs
assertion_line: 2708
expression: render_screen(&mut app)
---
 Access [Users]  Tokens  Machines  Keys
 new api key

  shown once — the server kept only a hash:

  <the-new-key>

  y copies it, Enter closes. Take it now.















 y:copy  Enter:close
