crates/cctui-tui/src/snapshots/cctui__view_snapshots__account_switch_picker_narrow.snap
---
source: crates/cctui-tui/src/view_snapshots.rs
assertion_line: 2062
expression: "render_screen_sized(&mut app, 60, 20)"
---
 cctui  v0.0.0-test  ● ~3  ▪ 0/0  $0.00  ! 1 need input — Ct
 1   starred · live · dispatched  sort: activity ↓  group: s
   ▾ Needs input (1)
▸    ● [claude-code] infra (main)  opus  0s  $1.25
   ▾ W┌ Switch account · anthropic ──────────────────┐
     ●│  alice@max       91%      5h   in use        │
     ▾│❯ carol@max       12%      5h   recommended   │
      │  bob@max         limited  15m                │1.25
   ▾ C│                                              │
     ○│                                              │
      │                                              │
      │                                              │
      │                                              │
      │binding 1 of 2                                │
      │ ↑↓ Pick  Enter Switch  tab Family  Esc Cancel│
      └──────────────────────────────────────────────┘



 j/k:nav  Enter:open  g/G:top/bottom  ?:help  q:quit
